# axum_email

./: .env  Cargo.toml
src/: config.rs  main.rs
src/handler/: users.rs
src/models/: users.rs
