[package]
name = "axum_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
serde = "1.0.183"
serde_json = "1.0.105"
lettre = {version="0.10.4"}
sqlx = { version = "0.7", features = [ "runtime-tokio","postgres"] }
dotenvy = "0.15.7"